
[package]
name = "async-proxy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "proxy"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tower = { version = "0.4", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "5"
bytes = "1"
tokio-rustls = "0.26"
rustls = "0.23"
anyhow = "1.0.102"


